cmake_minimum_required (VERSION 3.5)
project (Landing)
set(CMAKE_CXX_STANDARD 11)
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories("include")
add_definitions(-DNON_MATLAB_PARSING=1 -DMAX_EXT_API_CONNECTIONS=255 -DDO_NOT_USE_SHARED_MEMORY=1)
file(GLOB SRC *.cpp *.h *.c *.hpp stack/*.cpp stack/*.h stack/*.c stack/*.hpp include/*.cpp include/*.h include/*.c include/*.hpp)
add_executable(Landing ${SRC} logging.cpp logging.h)
target_link_libraries(Landing winmm ws2_32)