cmake_minimum_required(VERSION 3.5)
project(Landing)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(vrep stack updater utils state config)
add_definitions(-DNON_MATLAB_PARSING=1 -DMAX_EXT_API_CONNECTIONS=255 -DDO_NOT_USE_SHARED_MEMORY=1)
file(GLOB SRC *.cpp *.h stack/*.cpp stack/*.h vrep/*.c vrep/*.cpp vrep/*.h state/*.cpp state/*.h utils/*.cpp utils/*.h updater/*.cpp updater/*.h config/*.cpp config/*.c config/*.h)
add_executable(Landing ${SRC})
target_link_libraries(Landing winmm ws2_32)